@startuml

title __CARDS's Class Diagram__\n

  namespace  {
    namespace pp {
      namespace model {
        namespace bank {
          namespace card {
            namespace cards {
              class app.model.bank.card.cards.CreditCard {
                  + CreditCard()
                  + setCardType()
                  + toString()
              }
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace model {
        namespace bank {
          namespace card {
            namespace cards {
              class app.model.bank.card.cards.DebitCard {
                  + DebitCard()
                  + setCardType()
                  + toString()
              }
            }
          }
        }
      }
    }
  }
  

  app.model.bank.card.cards.CreditCard -up-|> app.model.bank.card.Card
  app.model.bank.card.cards.DebitCard -up-|> app.model.bank.card.Card


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
